--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: justb4/osm2pgsql
-        tags: latest,1.6.0-220708-1
+        # tags: latest,1.6.0-220708-1
+        tags: latest,1.7.0-1
         tag_with_ref: false
         tag_with_sha: true
