--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,15 +17,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    # TODO v2 is almost out with new syntax
-    - name: Build-Push-DockerHub
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: justb4/osm2pgsql
-        # tags: latest,1.6.0-220708-1
-        tags: latest,1.11.0-1
-        tag_with_ref: false
-        tag_with_sha: true
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: latest,1.11.0-1
